--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# CMake generated files
+build/
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+Makefile
+
+# CMake specific files that may be generated
+*.cmake
+
 # Prerequisites
 *.d
 
@@ -30,3 +40,19 @@
 *.exe
 *.out
 *.app
+
+# Editor backups and temporary files
+*~
+*.swp
+*.tmp
+
+# Folder view settings
+.DS_Store
+.directory
+
+# Optional binaries
+bin/
+lib/
+
+# Test executables
+test_kubify
