--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,19 +32,19 @@ target_link_libraries(kubify fmt::fmt)
 
 
 # Add test executable
-add_executable(test_kubify tests/TestKubifyApp.cpp ${SOURCES})
-target_link_libraries(test_kubify ${GTEST_LIBRARIES} pthread fmt::fmt)
+#add_executable(test_kubify tests/TestKubifyApp.cpp ${SOURCES})
+#target_link_libraries(test_kubify ${GTEST_LIBRARIES} pthread fmt::fmt)
 
 
 # Add test to the project to be run with 'make test' or 'ctest'
-add_test(NAME kubify_test COMMAND test_kubify)
+#add_test(NAME kubify_test COMMAND test_kubify)
 
 
 
 
 # Add test executable
-add_executable(test_mock_reader tests/TestMockReader.cpp ${SOURCES})
-target_link_libraries(test_mock_reader ${GTEST_LIBRARIES} pthread fmt::fmt)
+#add_executable(test_mock_reader tests/TestMockReader.cpp ${SOURCES})
+#target_link_libraries(test_mock_reader ${GTEST_LIBRARIES} pthread fmt::fmt)
 
 # Add test to the project to be run with 'make test' or 'ctest'
-add_test(NAME mock_reader_test COMMAND test_mock_reader)
+#add_test(NAME mock_reader_test COMMAND test_mock_reader)
