--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,17 +2,26 @@ cmake_minimum_required(VERSION 3.10)
 project(kubify VERSION 1.0)
 
 # Specify the C++ standard
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Include directories for your project
 include_directories("${PROJECT_SOURCE_DIR}/src")
+
+include_directories(
+    "/usr/local/include/kubernetes/include"
+    "/usr/local/include/kubernetes/config"
+    "/usr/local/include/kubernetes/api"
+)
+
 
 # Set all of the sources
 set(SOURCES
     src/KubifyApp.cpp
     src/Graph.cpp
 )
+
+find_package(kubepp_lib REQUIRED)
 
 
 # Add main application
@@ -27,7 +36,7 @@ include_directories(${GTEST_INCLUDE_DIRS})
 
 # Find the fmt library
 find_package(fmt REQUIRED)
-target_link_libraries(kubify fmt::fmt)
+target_link_libraries(kubify fmt::fmt kubepp_lib::kubepp_lib)
 
 
 
